--- a/templates/customers.html
+++ b/templates/customers.html
@@ -22,10 +22,10 @@
                     <td>{{ customer.id }}</td>
                     <td>{{ customer.first_name }}</td>
                     <td>{{ customer.last_name }}</td>
-                    <td>{{ customer.email }}</td>
+                    <td>{{ customer.email }}</td> 
                     <td>{{ customer.created_at }}</td>
                     <td>
-                        <a class="btn btn-danger" href="#">Remove</a>
+                        <a class="btn btn-danger" href="{% url 'delete_customer' customer.id %}">Remove</a>
                     </td>
                 </tr>
             {% empty %}
