--- a/templates/master.html
+++ b/templates/master.html
@@ -38,7 +38,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add_customer' %}">Add Customer</a>
+                    <a class="nav-link" href="{% url 'add_customer' %}"></a>
                 </li>
 
                 <li class="nav-item">
